--- a/src/pages/LandingPage/components/HeaderView/styles.module.css
+++ b/src/pages/LandingPage/components/HeaderView/styles.module.css
@@ -4,7 +4,7 @@
 
   margin: 0 auto;
   max-width: var(--ifm-container-width);
-  padding: 8rem 0 16rem 0;
+  padding: 8rem 1rem 16rem 1rem;
 }
 
 .AstronautImage {
@@ -75,7 +75,7 @@
 
 @media (max-width: 768px) {
   .Container {
-    padding: 8rem 1rem;
+    padding: 8rem 1rem 10rem 1rem;
   }
 
   .HeaderTitle {
