--- a/src/components/other/SectionScroller/styles.module.css
+++ b/src/components/other/SectionScroller/styles.module.css
@@ -11,6 +11,7 @@
   overflow: hidden;
   font-size: var(--ifm-font-size-18);
   background-color: var(--ifm-color-surface);
+  filter: drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.25));
 }
 
 .SectionInnerContainer {
