--- a/src/components/other/LiveCoder/components/FrameworkButton/styles.module.css
+++ b/src/components/other/LiveCoder/components/FrameworkButton/styles.module.css
@@ -1,6 +1,5 @@
 .Container {
   position: relative;
-  overflow: hidden;
 }
 
 .Container:not(:last-child) {
@@ -12,7 +11,7 @@
   align-items: center;
   justify-content: center;
   padding: 0.5rem;
-  background-color: var(--ifm-color-surface);
+  background-color: var(--ifm-color-background-2);
   border-radius: 8px;
 }
 
@@ -22,6 +21,38 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--ifm-color-background);
+  background-color: var(--ifm-color-background-2);
   opacity: 0.5;
+  border-radius: 8px;
+}
+
+.Container .TooltipText {
+  visibility: hidden;
+  width: 120px;
+  background-color: var(--ifm-color-surface-2);
+  color: var(--ifm-color-on-surface);
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  top: 5px;
+  left: 130%;
+
+  filter: drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.25));
+}
+
+.Container .TooltipText::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 100%;
+  margin-top: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent var(--ifm-color-surface-2) transparent transparent;
+}
+
+.Container:hover .TooltipText {
+  visibility: visible;
 }
