--- a/src/pages/LandingPage/components/StartCodingView/styles.module.css
+++ b/src/pages/LandingPage/components/StartCodingView/styles.module.css
@@ -1,3 +1,8 @@
 .Container {
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    max-width: var(--ifm-container-width);
+    margin: 0 auto;
 }
