--- a/src/components/other/LiveCoder/components/FrameworkButton/styles.module.css
+++ b/src/components/other/LiveCoder/components/FrameworkButton/styles.module.css
@@ -2,6 +2,10 @@
   position: relative;
 }
 
+.Container_Active {
+  filter: drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.25));
+}
+
 .Container:not(:last-child) {
   margin-bottom: 0.75rem;
 }
@@ -38,7 +42,6 @@
   z-index: 1;
   top: 5px;
   left: 130%;
-
   filter: drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.25));
 }
 
