--- a/src/components/other/LiveCoder/components/FrameworkButton/styles.module.css
+++ b/src/components/other/LiveCoder/components/FrameworkButton/styles.module.css
@@ -33,7 +33,7 @@
 .Container .TooltipText {
   visibility: hidden;
   width: 120px;
-  background-color: var(--ifm-color-surface-2);
+  background-color: var(--ifm-color-surface);
   color: var(--ifm-color-on-surface);
   text-align: center;
   border-radius: 6px;
@@ -43,17 +43,6 @@
   top: 5px;
   left: 130%;
   filter: drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.25));
-}
-
-.Container .TooltipText::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  right: 100%;
-  margin-top: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: transparent var(--ifm-color-surface-2) transparent transparent;
 }
 
 .Container:hover .TooltipText {
