--- a/src/pages/LandingPage/components/StartCodingView/styles.module.css
+++ b/src/pages/LandingPage/components/StartCodingView/styles.module.css
@@ -1,8 +1,31 @@
 .Container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    max-width: var(--ifm-container-width);
-    margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: var(--ifm-container-width);
+  margin: 0 auto;
+  padding: 8rem 0;
+}
+
+.Content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.HeaderContainer {
+  padding: 0 4rem;
+}
+
+.Tagline {
+  font-size: var(--ifm-font-size-18);
+  color: var(--ifm-color-on-background-2);
+  font-weight: bold;
+}
+
+.Title {
+  font-size: var(--ifm-font-size-36);
+  color: var(--ifm-color-on-background);
+  font-weight: bold;
 }
