--- a/src/components/other/LiveCoder/styles.module.css
+++ b/src/components/other/LiveCoder/styles.module.css
@@ -5,5 +5,18 @@
 }
 
 .FrameworkButtonsContainer {
+  display: flex;
+  flex-direction: column;
   margin: 2rem 1rem 0 0;
+}
+
+@media (max-width: 997px) {
+  .Container {
+    flex-direction: column;
+  }
+
+  .FrameworkButtonsContainer {
+    flex-direction: row;
+    margin: 0 0 0.5rem 0;
+  }
 }
