--- a/src/pages/LandingPage/components/StartCodingView/styles.module.css
+++ b/src/pages/LandingPage/components/StartCodingView/styles.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+  width: 95%;
   max-width: var(--ifm-container-width);
   margin: 0 auto;
   padding: 8rem 0;
@@ -28,4 +28,10 @@
   font-size: var(--ifm-font-size-36);
   color: var(--ifm-color-on-background);
   font-weight: bold;
+}
+
+@media (max-width: 997px) {
+  .HeaderContainer {
+    padding: 0;
+  }
 }
