--- a/src/pages/LandingPage/components/StraightforwardView/styles.module.css
+++ b/src/pages/LandingPage/components/StraightforwardView/styles.module.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+  width: 95%;
   max-width: var(--ifm-container-width);
   margin: 0 auto;
   transform: skewY(2deg);
@@ -40,7 +40,7 @@
   color: var(--ifm-color-on-background-3);
 }
 
-.FoundOutMoreButton {
+.FindOutMoreButton {
   align-self: flex-start;
   margin: 20px 10px 10px 50px;
 }
