--- a/src/components/other/StatBadge/styles.module.css
+++ b/src/components/other/StatBadge/styles.module.css
@@ -1,25 +1,33 @@
 .Container {
   position: relative;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
   flex-direction: column;
-  padding: 3rem 6rem;
+  height: 170px;
+  width: 260px;
+  cursor: pointer;
   border-radius: 8px;
   border: 2px solid var(--ifm-color-on-background-3);
 }
 
 .IconContainer {
   position: absolute;
-  top: 0;
-  right: 0;
+  display: flex;
+  top: -1rem;
+  right: -1rem;
   padding: 1rem;
-  border-radius: 100px;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
   background-color: var(--ifm-background-color);
   filter: drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.25));
 }
 
 .Icon {
   color: var(--ifm-color-on-background-2);
-  size: 1rem;
+  font-size: 1.5rem;
 }
 
 .ContentContainer {
@@ -28,12 +36,12 @@
 }
 
 .Number {
-  color: var(--ifm-color-on-background-3);
+  color: var(--ifm-color-on-background-2);
   font-size: var(--ifm-font-size-48);
   font-weight: bold;
 }
 
 .Text {
-  color: var(--ifm-color-on-background-2);
+  color: var(--ifm-color-on-background-3);
   font-size: var(--ifm-font-size-18);
 }
