--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -273,7 +273,7 @@ html[data-theme="dark"] {
   }
 
   .menu__link--active.active {
-    border-left: 5px solid var(--ifm-color-primary) !important;
+    border-left: 5px solid #6c69a0 !important;
     font-weight: 700 !important;
     padding-left: 8px;
     background-color: rgba(121, 118, 171, 0.2);
