--- a/src/_pages/LandingPage/components/OtherFeaturesView/components/Cards/components/Card/styles.module.css
+++ b/src/_pages/LandingPage/components/OtherFeaturesView/components/Cards/components/Card/styles.module.css
@@ -1,13 +1,13 @@
 .Container {
+  position: relative;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   padding: 2rem;
   background-color: var(--ifm-color-background-2);
   border-radius: 8px;
   width: 350px;
   height: 500px;
+  box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.05), 0 2px 4px 0 rgba(0, 0, 0, 0.10);
 }
 
 .ContentContainer {
