--- a/src/_pages/LandingPage/components/OtherFeaturesView/components/Cards/styles.module.css
+++ b/src/_pages/LandingPage/components/OtherFeaturesView/components/Cards/styles.module.css
@@ -1,7 +1,36 @@
 .Container {
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .Slider {
+  position: relative;
 
+  width: 100%;
+  max-width: 600px;
+  margin: 80px auto 0 auto;
+}
+
+.Item {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  display: block;
+  overflow: hidden;
+
+  opacity: 1;
+
+  cursor: pointer;
+
+  transition: transform 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67),
+  opacity 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67),
+  z-index 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+}
+
+.BulletContainer {
+  display: flex;
+  flex-direction: row;
 }
