--- a/src/_pages/LandingPage/components/OtherFeaturesView/components/Cards/components/BulletItem/styles.module.css
+++ b/src/_pages/LandingPage/components/OtherFeaturesView/components/Cards/components/BulletItem/styles.module.css
@@ -5,6 +5,8 @@
   background-color: var(--ifm-color-on-background-2);
   margin: 50px 5px 0 5px;
 
+  cursor: pointer;
+
   transform: scale(0.85);
   opacity: 0.2;
   transition: transform 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67),
