--- a/src/_pages/LandingPage/components/GiveItATriyView/styles.module.css
+++ b/src/_pages/LandingPage/components/GiveItATriyView/styles.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   width: 100%;
   padding: 5rem 0;
-  background-color: var(--ifm-color-background);
+  background-color: var(--ifm-color-background-3);
 }
 
 .Title {
