--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -13,7 +13,7 @@
 
   --ifm-color-black: #18191a;
   --ifm-color-black-light: #202026;
-  --ifm-color-black-lighter: #2a2a32;
+  --ifm-color-black-lighter: #26262f;
   --ifm-color-white: #ffffff;
   --ifm-color-white-dark: #f0f0fd;
   --ifm-color-white-darker: #e6e6fd;
