--- a/src/_pages/LandingPage/components/OtherFeaturesView/components/Cards/components/BulletItem/styles.module.css
+++ b/src/_pages/LandingPage/components/OtherFeaturesView/components/Cards/components/BulletItem/styles.module.css
@@ -7,14 +7,19 @@
 
   cursor: pointer;
 
-  transform: scale(0.85);
+  transform: scale(0.75);
   opacity: 0.2;
   transition: transform 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67),
   opacity 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
+.Container:hover {
+  opacity: 0.9;
+  background-color: var(--ifm-color-primary-lightest);
+}
+
 .Container__Active {
   opacity: 1;
   transform: scale(1);
-  background-color: var(--ifm-color-on-background);
+  background-color: var(--ifm-color-primary-light);
 }
