--- a/src/_pages/LandingPage/components/StatsView/components/StatBadge/styles.module.css
+++ b/src/_pages/LandingPage/components/StatsView/components/StatBadge/styles.module.css
@@ -21,7 +21,7 @@
   border-radius: 50%;
   align-items: center;
   justify-content: center;
-  background-color: var(--ifm-background-color);
+  background-color: var(--ifm-color-background-2);
   filter: drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.25));
 }
 
