created basic update method docs

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -269,6 +269,7 @@ html[data-theme="dark"] {
   .menu__list {
     .menu__link {
       color: var(--ifm-font-color-base);
+      font-weight: normal;
     }
   }
 
