--- a/src/_pages/LandingPage/components/HeaderView/styles.module.css
+++ b/src/_pages/LandingPage/components/HeaderView/styles.module.css
@@ -5,6 +5,7 @@
   margin: 0 auto;
   max-width: var(--ifm-container-width);
   padding: 8rem 0 16rem 0;
+  transition: padding 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
 .AstronautImage {
@@ -19,6 +20,8 @@
   color: var(--ifm-navbar-link-color);
   font-size: var(--ifm-font-size-64);
   font-weight: bold;
+
+  transition: font-size 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
 .SeparatorContainer {
@@ -51,6 +54,8 @@
   color: var(--ifm-color-primary-lightest);
   font-size: var(--ifm-font-size-24);
   max-width: 400px;
+
+  transition: font-size 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
 .ButtonContainer {
@@ -97,5 +102,10 @@
   .GetStartedButton {
     margin-right: 0;
     margin-bottom: 20px;
+  }
+}
+@media (max-height: 768px) {
+  .Container {
+    padding-top: 2rem;
   }
 }
