--- a/src/_pages/LandingPage/components/StartCodingView/components/LiveCoder/styles.module.css
+++ b/src/_pages/LandingPage/components/StartCodingView/components/LiveCoder/styles.module.css
@@ -2,12 +2,19 @@
   display: flex;
   flex: 1;
   flex-direction: row;
+
+  transition: flex-direction 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
 .FrameworkButtonsContainer {
   display: flex;
   flex-direction: column;
   margin: 2rem 1rem 0 0;
+}
+
+.CodeContainer {
+  transition: width 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  width: 900px;
 }
 
 .SandboxButton {
@@ -18,6 +25,10 @@
 @media (max-width: 997px) {
   .Container {
     flex-direction: column;
+  }
+
+  .CodeContainer {
+    width: 100%;
   }
 
   .FrameworkButtonsContainer {
