--- a/src/_pages/LandingPage/components/StartCodingView/components/LiveCoder/styles.module.css
+++ b/src/_pages/LandingPage/components/StartCodingView/components/LiveCoder/styles.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   max-width: 100%;
+  width: 100%;
 
   transition: flex-direction 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
@@ -17,6 +18,7 @@
   display: flex;
   flex-direction: column;
   max-width: 95%; /* because of left buttons and 100% is full screen width */
+  width: 100%;
 }
 
 .SandboxButton {
