--- a/src/_pages/LandingPage/components/StraightforwardView/components/SectionScroller/components/SectionRightItem/styles.module.css
+++ b/src/_pages/LandingPage/components/StraightforwardView/components/SectionScroller/components/SectionRightItem/styles.module.css
@@ -1,10 +1,10 @@
 .Container {
   max-width: 468px;
   padding: 1.25rem 1.5rem;
-  background: var(--ifm-background-color);
+  background-color: var(--ifm-background-color);
   border-radius: 8px;
   user-select: none;
-  transition: background 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  transition: background-color 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
 .Container:hover {
@@ -16,14 +16,7 @@
 }
 
 .Container_Active {
-  background: var(--ifm-color-primary);
-}
-
-.Container_Active .Description {
-  height: auto;
-  opacity: 1;
-  margin-top: 5px;
-  color: var(--ifm-color-on-primary);
+  background-color: var(--ifm-color-primary);
 }
 
 .Container_Active .Header {
@@ -31,11 +24,10 @@
 }
 
 .Description {
-  height: 0;
-  margin: 0;
-  opacity: 0;
+  width: 100%;
+  overflow: hidden;
   font-size: var(--ifm-font-size-18);
-  transition: opacity, height 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  color: var(--ifm-color-on-primary);
 }
 
 .Icon {
