--- a/src/_pages/LandingPage/components/StraightforwardView/components/SectionScroller/components/SectionRightItem/styles.module.css
+++ b/src/_pages/LandingPage/components/StraightforwardView/components/SectionScroller/components/SectionRightItem/styles.module.css
@@ -4,7 +4,7 @@
   background-color: var(--ifm-background-color);
   border-radius: 8px;
   user-select: none;
-  transition: background-color 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67), padding 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);;
+  transition: background-color 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67), padding 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
 .Container:hover {
@@ -41,6 +41,7 @@
   font-size: var(--ifm-font-size-18);
   font-weight: bold;
   color: var(--ifm-color-on-surface);
+  transition: color 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
 @media (max-width: 996px) {
