added privacy notice

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -43,8 +43,8 @@
   // Font Sizes
   // ==============================================================================
 
-  --ifm-font-size-12: .75rem;
-  --ifm-font-size-14: .875rem;
+  --ifm-font-size-12: 0.75rem;
+  --ifm-font-size-14: 0.875rem;
   --ifm-font-size-16: 1rem;
   --ifm-font-size-18: 1.125rem;
   --ifm-font-size-20: 1.25rem;
@@ -84,7 +84,12 @@
 
   // Surface
   --ifm-color-surface: var(--ifm-color-white-darker);
-  --ifm-color-surface-transparent: rgba(230, 230, 253, 0); /* https://stackoverflow.com/questions/15597167/css3-opacity-gradient */
+  --ifm-color-surface-transparent: rgba(
+    230,
+    230,
+    253,
+    0
+  ); /* https://stackoverflow.com/questions/15597167/css3-opacity-gradient */
   --ifm-color-surface-2: var(--ifm-color-white-darkest);
   --ifm-color-on-surface: var(--ifm-color-black);
   --ifm-color-on-surface-2: var(--ifm-color-purple-darkest);
@@ -164,7 +169,8 @@ body {
 
 /* Firefox */
 * {
-  scrollbar-color: var(--ifm-color-primary-lightest) var(--ifm-color-primary-darkest);
+  scrollbar-color: var(--ifm-color-primary-lightest)
+    var(--ifm-color-primary-darkest);
   scrollbar-width: thin;
 }
 
@@ -370,7 +376,7 @@ body {
 }
 
 /* https://codyhouse.co/blog/post/dark-light-switch-css-javascript */
-[data-theme="dark"] {
+[data-theme='dark'] {
   // ==============================================================================
   // Theme Colors
   // ==============================================================================
@@ -389,7 +395,12 @@ body {
 
   // Surface
   --ifm-color-surface: var(--ifm-color-gray-darkest);
-  --ifm-color-surface-transparent: rgba(38, 38, 48, 0); /* https://stackoverflow.com/questions/15597167/css3-opacity-gradient */
+  --ifm-color-surface-transparent: rgba(
+    38,
+    38,
+    48,
+    0
+  ); /* https://stackoverflow.com/questions/15597167/css3-opacity-gradient */
   --ifm-color-surface-2: var(--ifm-color-gray-dark);
   --ifm-color-on-surface: var(--ifm-color-white);
   --ifm-color-on-surface-2: var(--ifm-color-purple-lightest);
