--- a/src/theme/DocPage/styles.module.css
+++ b/src/theme/DocPage/styles.module.css
@@ -9,11 +9,42 @@
   --doc-sidebar-width: 300px;
 }
 
+.docPage {
+  display: inherit;
+}
+
+.docMainContainer {
+  flex: 1;
+  margin: 0;
+  background-color: blue;
+}
+
+.docItemWrapper {
+  position: relative;
+  max-width: var(--ifm-container-width);
+  margin: 0;
+  background-color: red;
+}
+
+{
+/* Small Sidebar */
+}
+.docSidebarContainer {
+  position: relative;
+  width: var(--doc-sidebar-width);
+  box-sizing: border-box;
+  margin-top: 0;
+}
+
 @media (min-width: 997px) {
   .docPage {
     display: flex;
+    justify-content: center;
   }
 
+{
+  /* Large Sidebar */
+}
   .docSidebarContainer {
     width: var(--doc-sidebar-width);
     margin-top: calc(-1 * var(--ifm-navbar-height));
@@ -25,7 +56,7 @@
 
   .docSidebarContainerHidden {
     width: 30px;
-    cursor: e-resize;
+    cursor: pointer;
   }
 
   .collapsedDocSidebar {
@@ -48,48 +79,26 @@
   html[data-theme='dark'] .collapsedDocSidebar:focus {
     background-color: var(--collapse-button-bg-color-dark);
   }
-
-  .docMainContainer {
-    flex-grow: 1;
-  }
-
-  .docItemWrapper {
-    max-width: var(--ifm-container-width);
-    margin: 0 auto;
-  }
-
-  .docItemWrapperEnhanced {
-    max-width: calc(var(--ifm-container-width) + var(--doc-sidebar-width));
-  }
-}
-
-@media (max-width: 996px) {
-  .docPage {
-    display: inherit;
-  }
-
-  .docSidebarContainer {
-    margin-top: 0;
-  }
-}
-
-@media (min-width: 997px) and (max-width: 1320px) {
-  .docItemWrapper {
-    max-width: calc(
-            var(--ifm-container-width) - var(--doc-sidebar-width) -
-            var(--ifm-spacing-horizontal) * 2
-    );
-  }
-
-  .docItemWrapperEnhanced {
-    max-width: calc(
-            var(--ifm-container-width) - var(--ifm-spacing-horizontal) * 2
-    );
-  }
 }
 
 @media (min-width: 1739px) {
   .docMainContainer {
-    margin-left: calc(var(--doc-sidebar-width) * -1);
+    margin-left: calc(
+            var(--doc-sidebar-width) * -1
+    ); /* To take full width without using a absolute view*/
+  }
+
+  .docMainContainerEnhanced {
+    background-color: yellow;
+  }
+
+  .docItemWrapper {
+    margin: 0 auto;
+    background-color: pink;
+  }
+
+  .docItemWrapperEnhanced {
+    margin: 0;
+    background-color: purple;
   }
 }
