--- a/src/_pages/LandingPage/components/HeaderView/styles.module.css
+++ b/src/_pages/LandingPage/components/HeaderView/styles.module.css
@@ -80,15 +80,29 @@
 
 @media (max-width: 768px) {
   .Container {
-    padding: 8rem 0 10rem 0;
+    padding: 10rem 0 0 0;
+    justify-content: center;
+    text-align: center;
   }
 
   .HeaderTitle {
     font-size: var(--ifm-font-size-40);
   }
 
+  .HeaderTyper {
+    justify-content: center;
+  }
+
+  .SeparatorText {
+    width: 100%;
+  }
+
   .SeparatorRight {
-    width: 150px;
+    width: 100%;
+  }
+
+  .SeparatorLeft {
+    width: 100%;
   }
 
   .DescriptionText {
@@ -97,6 +111,7 @@
 
   .ButtonContainer {
     flex-direction: column;
+    align-items: center;
   }
 
   .GetStartedButton {
@@ -104,8 +119,9 @@
     margin-bottom: 20px;
   }
 }
+
 @media (max-height: 768px) {
   .Container {
-    padding-top: 2rem;
+    padding: 2rem 0 5rem 0;
   }
 }
