fixed max width

--- a/src/_pages/LandingPage/components/GiveItATriyView/styles.module.css
+++ b/src/_pages/LandingPage/components/GiveItATriyView/styles.module.css
@@ -56,7 +56,7 @@
   }
 }
 
-@media (max-height: 800px) {
+@media (max-height: 800px) and (max-width: 768px) {
   .Container {
     padding: 4em 0;
   }
