--- a/src/_pages/LandingPage/components/StatsView/styles.module.css
+++ b/src/_pages/LandingPage/components/StatsView/styles.module.css
@@ -43,7 +43,7 @@
   margin: 2em;
 }
 
-@media (max-height: 800px) {
+@media (max-height: 800px) and (max-width: 768px) {
   .Container {
     padding: 4em 0;
   }
