--- a/src/_pages/LandingPage/components/StartCodingView/styles.module.css
+++ b/src/_pages/LandingPage/components/StartCodingView/styles.module.css
@@ -61,7 +61,7 @@
   }
 }
 
-@media (max-height: 800px) {
+@media (max-height: 800px) and (max-width: 768px) {
   .Container {
     padding: 4em 0;
   }
