--- a/src/_pages/LandingPage/components/StraightforwardView/styles.module.css
+++ b/src/_pages/LandingPage/components/StraightforwardView/styles.module.css
@@ -46,7 +46,7 @@
   margin: 10px;
 }
 
-@media (max-height: 800px) {
+@media (max-height: 800px) and (max-width: 768px) {
   .Container {
     padding: 4em 0;
   }
