--- a/src/_pages/LandingPage/components/StraightforwardView/styles.module.css
+++ b/src/_pages/LandingPage/components/StraightforwardView/styles.module.css
@@ -48,6 +48,6 @@
 
 @media (max-height: 800px) and (max-width: 768px) {
   .Container {
-    padding: 4em 0;
+    padding: 4em 0 !important;
   }
 }
