--- a/src/_pages/LandingPage/components/StraightforwardView/styles.module.css
+++ b/src/_pages/LandingPage/components/StraightforwardView/styles.module.css
@@ -41,7 +41,7 @@
   color: var(--ifm-color-on-background-3);
 }
 
-.FindOutMoreButton {
+.LearnMoreButton {
   align-self: flex-start;
   margin: 10px;
 }
