--- a/src/theme/DocPage/styles.module.css
+++ b/src/theme/DocPage/styles.module.css
@@ -94,3 +94,30 @@
     max-width: var(--ifm-container-width);
   }
 }
+
+:global(.table-of-contents) {
+  border-left-width: 3px;
+}
+
+:global(.table-of-contents li) {
+  position: relative;
+}
+
+:global(.table-of-contents__link--active::before) {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: -19px;
+  width: 3px;
+  content: " ";
+  background: var(--ifm-color-primary-lightest);
+}
+
+:global(.table-of-contents__link--active) {
+  color: var(--ifm-color-primary-lightest);
+  font-weight: bold;
+}
+
+ul ul :global(.table-of-contents__link--active::before) {
+  left: -35px;
+}
