--- a/src/_pages/LandingPage/components/StraightforwardView/styles.module.css
+++ b/src/_pages/LandingPage/components/StraightforwardView/styles.module.css
@@ -25,13 +25,13 @@
 }
 
 .Tagline {
-  font-size: var(--ifm-font-size-18);
+  font-size: var(--ifm-font-size-28);
   color: var(--ifm-color-on-background-2);
   font-weight: bold;
 }
 
 .Title {
-  font-size: var(--ifm-font-size-36);
+  font-size: var(--ifm-font-size-48);
   color: var(--ifm-color-on-background);
   font-weight: bold;
 }
@@ -44,6 +44,16 @@
 .LearnMoreButton {
   align-self: flex-start;
   margin: 10px;
+}
+
+@media (max-width: 768px) {
+  .Title {
+    font-size: var(--ifm-font-size-36);
+  }
+
+  .Tagline {
+    font-size: var(--ifm-font-size-18);
+  }
 }
 
 @media (max-height: 800px) and (max-width: 768px) {
