--- a/src/_pages/LandingPage/components/StartCodingView/styles.module.css
+++ b/src/_pages/LandingPage/components/StartCodingView/styles.module.css
@@ -31,15 +31,30 @@
 }
 
 .Tagline {
-  font-size: var(--ifm-font-size-18);
+  font-size: var(--ifm-font-size-28);
   color: var(--ifm-color-on-background-2);
   font-weight: bold;
 }
 
 .Title {
-  font-size: var(--ifm-font-size-36);
+  font-size: var(--ifm-font-size-48);
   color: var(--ifm-color-on-background);
   font-weight: bold;
+}
+
+.TaglineContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.Label {
+  margin: 5px 0 0 10px;
+  border-radius: 3px;
+  padding: 0.1rem 0.5rem;
+  color: var(--ifm-color-on-surface);
+  background-color: var(--ifm-color-red);
+  font-size: var(--ifm-font-size-12);
 }
 
 @media (max-width: 997px) {
@@ -58,6 +73,16 @@
 
   .InnerContent {
     align-items: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .Title {
+    font-size: var(--ifm-font-size-36);
+  }
+
+  .Tagline {
+    font-size: var(--ifm-font-size-18);
   }
 }
 
