--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -141,6 +141,9 @@
   --ifm-navbar-padding-horizontal: 0;
   --ifm-dropdown-background-color: var(--ifm-color-background-2);
   --ifm-dropdown-hover-background-color: var(--ifm-color-background-3);
+
+  // Font
+  font-family: "Roboto";
 }
 
 // ==============================================================================
