--- a/src/_pages/LandingPage/components/StraightforwardView/components/SectionScroller/components/SectionLeftItem/styles.module.css
+++ b/src/_pages/LandingPage/components/StraightforwardView/components/SectionScroller/components/SectionLeftItem/styles.module.css
@@ -6,6 +6,7 @@
   border-radius: 8px;
   transition: top 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
   --ifm-leading: 0; /* because of weired margin of codeblock */
+  --ifm-spacing-vertical: 0 /* because of weired margin of codeblock */
 }
 
 .Container:not(:last-child) {
