fixed typos in style guide

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -288,6 +288,14 @@ body {
 }
 
 // ==============================================================================
+// Doc Page Footer
+// ==============================================================================
+
+.docusaurus-mt-lg {
+  margin-top: 3rem;
+}
+
+// ==============================================================================
 // Toastify
 // ==============================================================================
 
