--- a/src/_pages/LandingPage/components/StartCodingView/components/LiveCoder/components/LiveCoderReact/styles.module.css
+++ b/src/_pages/LandingPage/components/StartCodingView/components/LiveCoder/components/LiveCoderReact/styles.module.css
@@ -36,3 +36,14 @@
   background-color: var(--ifm-color-surface-2);
   font-size: var(--ifm-font-size-12);
 }
+
+.LiveLabel {
+  position: absolute;
+  right: 2rem;
+  top: 2rem;
+  border-radius: 3px;
+  padding: 0.2rem 0.5rem;
+  color: var(--ifm-color-on-surface);
+  background-color: var(--ifm-color-red);
+  font-size: var(--ifm-font-size-12);
+}
