--- a/src/_pages/LandingPage/components/HeaderView/styles.module.css
+++ b/src/_pages/LandingPage/components/HeaderView/styles.module.css
@@ -19,6 +19,7 @@
 .HeaderTitle {
   color: var(--ifm-navbar-link-color);
   font-size: var(--ifm-font-size-36);
+  font-weight: normal;
 
   transition: font-size 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
@@ -32,6 +33,7 @@
   color: var(--ifm-color-primary-lightest);
   font-size: var(--ifm-font-size-24);
   max-width: 400px;
+  margin: 0;
 
   transition: font-size 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
