--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -143,7 +143,7 @@
   --ifm-dropdown-hover-background-color: var(--ifm-color-background-3);
 
   // Font
-  font-family: "Roboto";
+  font-family: Roboto, serif;
 }
 
 // ==============================================================================
