--- a/src/_pages/LandingPage/components/HeaderView/styles.module.css
+++ b/src/_pages/LandingPage/components/HeaderView/styles.module.css
@@ -8,9 +8,9 @@
   transition: padding 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
-.AstronautImage {
+.RocketImage {
   position: absolute;
-  right: 0;
+  right: 10%;
   width: 45%;
   max-width: 800px;
   opacity: 1;
@@ -53,7 +53,7 @@
 }
 
 @media (max-width: 996px) {
-  .AstronautImage {
+  .RocketImage {
     opacity: 0;
   }
 }
